--- a/css/normalize.css
+++ b/css/normalize.css
@@ -287,13 +287,14 @@ select {
  *    `input` and others.
  */
 
-button,
-html input[type="button"], /* 1 */
-input[type="reset"],
-input[type="submit"] {
-  -webkit-appearance: button; /* 2 */
-  cursor: pointer; /* 3 */
-}
+ button,
+ html input[type="button"],
+ input[type="reset"],
+ input[type="submit"] {
+   -webkit-appearance: button; 
+   appearance: button;
+   cursor: pointer;
+ }
 
 /**
  * Re-set default cursor for disabled elements.
@@ -354,10 +355,11 @@ input[type="number"]::-webkit-outer-spin-button {
  *    (include `-moz` to future-proof).
  */
 
-input[type="search"] {
-  -webkit-appearance: textfield; /* 1 */
+ input[type="search"] {
+  -webkit-appearance: textfield; 
+  appearance: textfield; 
   -moz-box-sizing: content-box;
-  -webkit-box-sizing: content-box; /* 2 */
+  -webkit-box-sizing: content-box;
   box-sizing: content-box;
 }
 
