--- a/css/style.css
+++ b/css/style.css
@@ -189,9 +189,9 @@ main {
   display: -ms-grid;
   display: grid;
   grid-gap: 10px;
-  
-  -ms-grid-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-  grid-template-columns: repeat(7, 1fr);
+
+  -ms-grid-columns:1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+      grid-template-columns: repeat(7, 1fr);
 }
 
 .picture {
@@ -1322,6 +1322,10 @@ main {
           transform: translateX(-50%);
 }
 
+
+/* Адаптивности чуток
+   ========================================================================== */
+
 @media (min-width: 1024px) {
   .img-upload__wrapper {
     padding-bottom: 0;
@@ -1329,16 +1333,44 @@ main {
 }
 
 @media (min-width: 1024px) and (max-width: 1359px) {
+  .container {
+    width: 980px;
+  }
+
   .pictures {
-    -ms-grid-columns: 1fr 1fr 1fr 1fr 1fr; /* 5 колонок */
+    -ms-grid-columns: 1fr 1fr 1fr 1fr 1fr;
     grid-template-columns: repeat(5, 1fr);
+  }
+
+  .img-upload {
+    -ms-grid-column: 2;
+    -ms-grid-column-span: 3;
+    grid-column: 2 / span 3;
+
+    -ms-grid-row: 1;
+    -ms-grid-row-span: 3;
+    grid-row: 1 / span 3;
   }
 }
 
 @media (min-width: 0) and (max-width: 1023px) {
+  .container {
+    width: 600px;
+  }
+
   .pictures {
-    -ms-grid-columns: 1fr 1fr 1fr; /* 3 колонки */
+    -ms-grid-columns: 1fr 1fr 1fr;
     grid-template-columns: repeat(3, 1fr);
+  }
+
+  .img-upload {
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 3;
+    grid-column: 1 / span 3;
+
+    -ms-grid-row: 1;
+    -ms-grid-row-span: 3;
+    grid-row: 1 / span 3;
   }
 }
 
@@ -1362,24 +1394,4 @@ main {
 
 .hidden {
   display: none;
-}
-
-.pictures__list {
-  display: grid;
-  grid-template-columns: repeat(7, 1fr); /* 7 колонок для больших экранов */
-  gap: 10px; /* расстояние между фото */
-  width: 700%;
-  margin-top: 10px;
-}
-
-@media (max-width: 1359px) {
-  .pictures__list {
-    grid-template-columns: repeat(5, 1fr); /* 5 колонок */
-  }
-}
-
-@media (max-width: 1023px) {
-  .pictures__list {
-    grid-template-columns: repeat(3, 1fr); /* 3 колонки для маленьких экранов */
-  }
 }
